--- a/jogo_da_velha/posicionamento.css
+++ b/jogo_da_velha/posicionamento.css
@@ -1,5 +1,7 @@
+
 body{
 	background: rgb(202,202,202);
+    font-family: 'Zilla Slab', serif;
 }
 
 h1{
@@ -11,19 +13,19 @@ h1{
 }
 
 #carro{
-	width: 437px;
+	width: 452px;
     height: 208px;
     position: relative;
     right: 19px;
 }
 
 #funfa{
-	position: relative;
+	position: fixed;
     display: inline-block;
     width: 470px;
     height: 458px;
-    left: 355px;
-    top: 50px;
+    left: 335px;
+    top: 166px;
 }
 
 #tudo{
@@ -105,10 +107,33 @@ h1{
 }
 
 #empatou{
-	position: fixed;
-    bottom: 246px;
-    right: 610px;
-    font-size: 27px;
-    display: inline-block;
+	
 }
 
+#play{
+    position: relative;
+    width: 427px;
+    height: 380px;
+    left: 355px;
+    top: 7px;
+    background: rgb(2, 1, 1);
+    text-align: center;
+}
+
+p3{
+    top: 156px;
+    position: relative;
+    color: red;
+    font-size: 55px;
+}
+
+button{
+    position: relative;
+    top: 168px;
+    font-size: 66px;
+    background: black;
+    color: red;
+    border: none;
+    width: 200px;
+    height: 96px;
+}
